More kernel version validation points
Change-Id: I908aa69d4fc0784d8f2303f20c39878af7f3f6d2

--- a/res/xml/crdroid_settings_powersave.xml
+++ b/res/xml/crdroid_settings_powersave.xml
@@ -137,6 +137,7 @@
     </PreferenceCategory>
 
         <PreferenceScreen
+            android:key="baikalos_profile_editor"
             android:title="@string/baikalos_profile_edit_title"
             android:summary="@string/baikalos_profile_edit_summary"
             android:fragment="com.crdroid.settings.fragments.PerformanceProfileEditor" />
