Idle mode profiles
Change-Id: I11f63a571ad20e65fd12b7b38f87a4890c1e43a5

--- a/res/values-ru-rRU/app_profile_strings.xml
+++ b/res/values-ru-rRU/app_profile_strings.xml
@@ -3,6 +3,10 @@
     <string name="app_profile_title">Профиль приложения</string>
     <string name="app_profile_performance_title">Профиль производительности</string>
     <string name="app_profile_thermal_title">Профиль температурного режима</string>
+
+    <string name="app_idle_performance_title">Профиль производительности во сне</string>
+    <string name="app_idle_thermal_title">Профиль температурного режима во сне</string>
+
     <string name="app_profile_brightness_title">Яркость экрана</string>
     <string name="app_profile_rotation_title">Поворот экрана</string>
     <string name="app_profile_camera_hal1_title">Camera API 1</string>
