Do Not Close app option
Change-Id: Id3aaa426947700bcfc72da7fc53efe977d825bb4

--- a/res/values-ru-rRU/app_profile_strings.xml
+++ b/res/values-ru-rRU/app_profile_strings.xml
@@ -58,7 +58,10 @@
     <string name="background_restrictions_disabled">Отключено</string>
 
     <string name="app_profile_pinned_title">Закрепить</string>
-    <string name="app_profile_pinned_summary">Менеджер памяти не будет закрывать приложение по неактивности</string>
+    <string name="app_profile_pinned_summary">Защитить приложение от закрытия системой</string>
+
+    <string name="app_profile_donotclose_title">Не закрывать</string>
+    <string name="app_profile_donotclose_summary">Не закрывать приложение при работе агрессивного менеджера памяти</string>
 
     <string name="app_profile_disable_title">Запретить Автозагрузку</string>
     <string name="app_profile_disable_summary">Запретить автозагрузку приложения во время загрузки устройства</string>
