--- a/res/values/app_profile_strings.xml
+++ b/res/values/app_profile_strings.xml
@@ -79,7 +79,10 @@
     <string name="background_restrictions_disabled">Disabled</string>
 
     <string name="app_profile_pinned_title">Pinned</string>
-    <string name="app_profile_pinned_summary">Do not close on memory management</string>
+    <string name="app_profile_pinned_summary">Protect an app from been killed by the system</string>
+
+    <string name="app_profile_donotclose_title">Do not close</string>
+    <string name="app_profile_donotclose_summary">Do not close on aggressive memory management</string>
 
     <string name="app_profile_disable_title">Disable Autostart</string>
     <string name="app_profile_disable_summary">Disable app autostart on device boot</string>
