Rstricted network and kernel compatibility
Change-Id: I504e84c5bb96de85826c0a597fa82f34a7b8bd79

--- a/res/values-ru-rRU/baikal_strings.xml
+++ b/res/values-ru-rRU/baikal_strings.xml
@@ -135,4 +135,7 @@
     <string name="app_profile_heavy_cpu_title">Много CPU</string>
     <string name="app_profile_heavy_cpu_summary">Приложение требует полной мощности CPU. Понизить приоритет всем фоновым приложениям.</string>
 
+    <string name="restricted_networking_mode_title">Ограничения сети</string>
+    <string name="restricted_networking_mode_summary">Разрешить ограничения доступа к сети отдельных приложений</string>
+
 </resources>
