New back gesture option
Change-Id: I799740328c887f39708760e5d30e5c2f324d57a2

--- a/res/values-ru-rRU/baikal_strings.xml
+++ b/res/values-ru-rRU/baikal_strings.xml
@@ -141,6 +141,9 @@
     <string name="purge_package_cache_title">Очистить кеш пакетов</string>
     <string name="purge_package_cache_summary">Очистить кеш пакетов установленных приложений при следующей загрузке</string>
 
+    <string name="ui_use_new_back_gesturu_title">Новый вид жеста назад</string>
+    <string name="ui_use_new_back_gesturu_summary">Использовать новый внешний вид жеста назад</string>
+
     <string name="profile_management_title">Профили Приложений</string>
 
 </resources>
