Refactor baikalos audio routing
Change-Id: Ib3488a2cc878d82a2ab63d77f0ce30426ff6bb36

--- a/res/values/baikal_arrays.xml
+++ b/res/values/baikal_arrays.xml
@@ -55,6 +55,17 @@
         <item>2</item>
     </string-array>
 
+    <string-array name="app_sonif_a2dp_listentries" translatable="false">
+        <item>@string/sonif_a2dp_default</item>
+        <item>@string/sonif_a2dp_force_speaker</item>
+    </string-array>
+
+
+    <string-array name="app_sonif_a2dp_listvalues" translatable="false">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
     <string-array name="brightness_curve_entries">
     	<item>@string/brightness_curve_default</item>
     	<item>@string/brightness_curve_darker</item>
