--- a/res/values/powersave_strings.xml
+++ b/res/values/powersave_strings.xml
@@ -7,6 +7,10 @@
     <string name="baikalos_aggressive_idle_title">Power Save</string>
     <string name="baikalos_aggressive_idle_summary">Enable BaikalOS power saving options.</string>
 
+    <string name="baikalos_super_saver_title">Super Saver</string>
+    <string name="baikalos_super_saver_summary">Do not report lags in this mode! It\'s by design</string>
+
+
     <string name="baikalos_extreme_idle_title">Aggressive Mode</string>
     <string name="baikalos_extreme_idle_summary">Aggressively restrict background processes.</string>
 
