--- a/res/values/powersave_strings.xml
+++ b/res/values/powersave_strings.xml
@@ -8,7 +8,7 @@
     <string name="baikalos_aggressive_idle_summary">Enable BaikalOS power saving options.</string>
 
     <string name="baikalos_super_saver_title">Super Saver</string>
-    <string name="baikalos_super_saver_summary">Do not report lags in this mode! It\'s by design</string>
+    <string name="baikalos_super_saver_summary">Allow the system to go into deep sleep with screen on. Do not report lags in this mode! It\'s by design</string>
 
 
     <string name="baikalos_extreme_idle_title">Aggressive Mode</string>
