dumpsys and supersvaer on draw options
Change-Id: Ia3cdedb9a4f5d11e80713165120a2d4181b24cce

--- a/res/values-ru-rRU/powersave_strings.xml
+++ b/res/values-ru-rRU/powersave_strings.xml
@@ -10,6 +10,9 @@
     <string name="baikalos_super_saver_title">Супер Сберегалка</string>
     <string name="baikalos_super_saver_summary">Резрешать переводить ЦПУ в режим глубокого сна при включенном экране. Не сообщайте о лагах в этом режиме! Они тут по дизайну.</string>
 
+    <string name="baikalos_super_saver_draw_title">Отключать при выводе</string>
+    <string name="baikalos_super_saver_draw_summary">Отключать супер сберегалку при рисовании кадра</string>
+
     <string name="baikalos_extreme_idle_title">Агрессивный режим</string>
     <string name="baikalos_extreme_idle_summary">Агрессивно ограничивать фоновую активность.</string>
 
