--- a/res/values-ru-rRU/baikal_strings.xml
+++ b/res/values-ru-rRU/baikal_strings.xml
@@ -19,11 +19,12 @@
 <resources>
 
     <string name="log_it_title">Снять лог!</string>
-    <string name="log_it_summary">Logcat, kmesg, dmesg</string>
+    <string name="log_it_summary">Logcat, kmesg, dmesg, dumpsys</string>
     <string name="logcat_title">Logcat</string>
     <string name="logcat_radio_title">Радио лог</string>
     <string name="kmesg_title">Kmesg</string>
     <string name="dmesg_title">Dmesg</string>
+    <string name="dumpsys_title">Dumpsys</string>
     <string name="share_title">Поделиться...</string>
     <string name="log_it_share_subject">Логи BaikalOS</string>
     <string name="log_it_now_summary">Ожидайте создания логов</string>
