--- a/res/xml/crdroid_settings_powersave.xml
+++ b/res/xml/crdroid_settings_powersave.xml
@@ -101,14 +101,6 @@
         />
 
         <com.crdroid.settings.preferences.GlobalSettingSwitchPreference
-            android:key="baikalos_super_saver"
-            android:defaultValue="false"
-            android:title="@string/baikalos_super_saver_title"
-            android:summary="@string/baikalos_super_saver_summary"
-        />
-
-
-        <com.crdroid.settings.preferences.GlobalSettingSwitchPreference
             android:key="cached_apps_freezer"
             android:defaultValue="true"
             android:title="@string/baikalos_freeze_cached_title"
@@ -155,6 +147,20 @@
             android:defaultValue="true"
             android:title="@string/baikalos_rendering_boost_title"
             android:summary="@string/baikalos_rendering_boost_summary"
+        />
+
+        <com.crdroid.settings.preferences.GlobalSettingSwitchPreference
+            android:key="baikalos_super_saver"
+            android:defaultValue="false"
+            android:title="@string/baikalos_super_saver_title"
+            android:summary="@string/baikalos_super_saver_summary"
+        />
+
+        <com.crdroid.settings.preferences.GlobalSettingSwitchPreference
+            android:key="baikalos_super_saver_draw"
+            android:defaultValue="false"
+            android:title="@string/baikalos_super_saver_draw_title"
+            android:summary="@string/baikalos_super_saver_draw_summary"
         />
 
     </PreferenceCategory>
