Block infopanel app option, Device Dile debug option
Change-Id: I43d3c175034cd255fb8372180b4a3c9346089bc4

--- a/res/values-ru-rRU/app_profile_strings.xml
+++ b/res/values-ru-rRU/app_profile_strings.xml
@@ -234,4 +234,7 @@
     <string name="super_saver_disabled">Запрещен</string>
     <string name="super_saver_forced">Включен</string>
 
+    <string name="app_profile_block_overlays_title">Блокировать Инфопанели</string>
+    <string name="app_profile_block_overlays_summary">Блокировать наэкранные инфопанели (CPU, FPS инфо)</string>
+
 </resources>
