FUSE passthrough option
Change-Id: Iee0f8bf897b9c0d238e22644cd6ea8e727c6732e

--- a/res/values-ru-rRU/baikal_strings.xml
+++ b/res/values-ru-rRU/baikal_strings.xml
@@ -147,4 +147,7 @@
 
     <string name="profile_management_title">Профили Приложений</string>
 
+    <string name="fuse_passthrough_title">FUSE passthrough</string>
+    <string name="fuse_passthrough_summary">Использовать FUSE passthrough если доступен. Требуется перезагрузка.</string>
+
 </resources>
