Option to disable some system services
Change-Id: Ib14b0ff2fb518906739d98aa7295f5dcd9235fae

--- a/res/values-ru-rRU/baikal_strings.xml
+++ b/res/values-ru-rRU/baikal_strings.xml
@@ -150,4 +150,7 @@
     <string name="fuse_passthrough_title">FUSE passthrough</string>
     <string name="fuse_passthrough_summary">Использовать FUSE passthrough если доступен. Требуется перезагрузка.</string>
 
+    <string name="baikalos_enable_optional_components_title">Опциональные сервисы</string>
+    <string name="baikalos_enable_optional_components_summary">Включить некоторые необязательные сервисы, такие как Nearby Discovery и т.д. Требуется перезагрузка</string>
+
 </resources>
